objects/Fredobj__c.object
<CustomObject>
    <fields>
        <fullName>AdamxBar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdamxBar</label>
        <referenceTo>Adam_Bar__c</referenceTo>
        <relationshipLabel>Fredobjs</relationshipLabel>
        <relationshipName>Fredobjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>formulanext__c</fullName>
        <formula>(AdamxBar__r.isactive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formulanext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>formulatest__c</fullName>
        <formula>AdamxBar__r.isactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formulatest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fredactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>fredactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpleform__c</fullName>
        <formula>(! fredactive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>simpleform</label>
        <type>Checkbox</type>
    </fields>
    <label>Fredobj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fredobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fredobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>